deployment/scripts/agent-test.yaml
---
# Source: agent/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: collie-agent
  labels:
    
    app.kubernetes.io/name: collie
    app.kubernetes.io/instance: collie
    app.kubernetes.io/version: "v0.42.1"
    app.kubernetes.io/managed-by: collie
# ---
# # Source: agent/templates/resource-quota.yaml
# apiVersion: v1
# kind: ResourceQuota
# metadata:
#   name: agent-critical-pods
#   namespace: collie-agent
#   labels:
    
#     app.kubernetes.io/name: agent
#     app.kubernetes.io/instance: agent
#     app.kubernetes.io/version: "v0.42.1"
#     app.kubernetes.io/managed-by: collie
  
# spec:
#   scopeSelector:
#     matchExpressions:
#       - operator: In
#         scopeName: PriorityClass
#         values:
#           # Required to ensure agent is always running to provide autoscaling capabilities.
#           - system-cluster-critical
---
# Source: agent/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent
  namespace: collie-agent
  labels:
    app.kubernetes.io/name: agent
    app.kubernetes.io/instance: agent
    app.kubernetes.io/version: "v0.42.1"
    app.kubernetes.io/managed-by: collie
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: agent
      app.kubernetes.io/instance: agent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: agent
        app.kubernetes.io/instance: agent
    spec:
      priorityClassName: system-cluster-critical
      serviceAccountName: agent
      automountServiceAccountToken: true
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: provisioner.collie/managed-by
                operator: In
                values:
                - collie
            weight: 100
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: NotIn
                values:
                - windows
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - agent
              topologyKey: kubernetes.io/hostname
            weight: 100
      securityContext:
        fsGroup: 1002
        runAsGroup: 1002
        runAsNonRoot: true
        runAsUser: 1002
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: agent
          image: collie.azurecr.io/collie-agent:1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 1000m
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 9876
              name: healthz
          readinessProbe:
            httpGet:
              port: healthz
          livenessProbe:
            httpGet:
              port: healthz
