deployment/scripts/bad-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app.kubernetes.io/instance: helloworld-web
    app.kubernetes.io/name: helloworld-web
    app.kubernetes.io/version: v0.42.1
  name: helloworld-web
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: helloworld-web
      app.kubernetes.io/name: helloworld-web
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: helloworld-web
        app.kubernetes.io/name: helloworld-web
    spec:
      containers:
      - env:
        - name: PROVIDER
          value: aks
        image: crccheck/hello-world
        imagePullPolicy: IfNotPresent
        name: helloworld-web
        ports:
        - containerPort: 80
          hostPort: 8080
          hostIP: 10.0.0.1
