deployment/scripts/toolbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toolbox
  namespace: default
  labels:
    app: toolbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toolbox
  template:
    metadata:
      labels:
        app: toolbox
    spec:
      containers:
        - name: toolbox
          image: ubuntu:latest
          imagePullPolicy: IfNotPresent
