deployment/scripts/portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
  namespace: collie-server
  labels:
    app.kubernetes.io/name: portal
    app.kubernetes.io/instance: portal
    app.kubernetes.io/version: "v1"
    app.kubernetes.io/managed-by: collie
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: portal
      app.kubernetes.io/instance: portal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portal
        app.kubernetes.io/instance: portal
    spec:
      containers:
        - name: portal
          image: collie.azurecr.io/collie-portal:1 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9876
              name: healthz
          readinessProbe:
            httpGet:
              port: healthz
          livenessProbe:
            httpGet:
              port: healthz
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: portal
    app.kubernetes.io/managed-by: collie
    app.kubernetes.io/name: portal
    app.kubernetes.io/version: v1
  name: portal
  namespace: collie-server
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: portal
    app.kubernetes.io/name: portal
  sessionAffinity: None
  type: ClusterIP
